--- a/examples/config.ini
+++ b/examples/config.ini
@@ -5,3 +5,10 @@ id = <Google Calendar>
 token = <Discord Bot Token>
 threadsChannel = <Threads Channel ID>
 botAdminRole = <Bot Admin Role Name>
+bookerEmoji = <Booker Emoji>
+doorEmoji = <Door Emoji>
+soundEmoji = <Sound Emoji>
+doorTrainingEmoji = <Sound Training Emoji>
+soundTrainingEmoji = <Door Training Emoji>
+onCallEmoji = <On Call Emoji>
+vendorEmoji = <Vendor Emoji>
