cleaned up /upcoming

--- a/examples/config.ini
+++ b/examples/config.ini
@@ -12,3 +12,4 @@ doorTrainingEmoji = <Sound Training Emoji>
 soundTrainingEmoji = <Door Training Emoji>
 onCallEmoji = <On Call Emoji>
 vendorEmoji = <Vendor Emoji>
+searchLimit = <Threads Channel Search Limit>
