--- a/examples/config.ini
+++ b/examples/config.ini
@@ -1,6 +1,9 @@
 [CALENDAR]
 id = <Google Calendar>
 
+[DATABASE]
+file = <Database File>
+
 [DISCORD]
 token = <Discord Bot Token>
 threadsChannel = <Threads Channel ID>
