small general performance improvement to /upcoming

--- a/examples/config.ini
+++ b/examples/config.ini
@@ -6,6 +6,7 @@ file = <Database File>
 
 [DISCORD]
 token = <Discord Bot Token>
+threadsGuild = <Threads Guild ID>
 threadsChannel = <Threads Channel ID>
 botAdminRole = <Bot Admin Role Name>
 bookerEmoji = <Booker Emoji>
