Added specific attending emoji

--- a/examples/config.ini
+++ b/examples/config.ini
@@ -16,4 +16,6 @@ doorTrainingEmoji = <Sound Training Emoji>
 soundTrainingEmoji = <Door Training Emoji>
 onCallEmoji = <On Call Emoji>
 vendorEmoji = <Vendor Emoji>
+attendingEmoji = <Attending Emoji>
+warningConeEmoji = <Warning Cone Emoji>
 searchLimit = <Threads Channel Search Limit>
